add more tests, add validation on fromDate and toDate